--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,14 +3,12 @@ services:
   frontend:
     build:
       context: ./frontend
-      dockerfile: Dockerfile.dev
+      dockerfile: Dockerfile
     container_name: app_frontend
     volumes:
       - /app/node_modules #개발환경에서 코드 수정시 node_modules은 호스트의 node_modules를 참조하지 않음.
       - ./frontend:/app
     stdin_open: true #react app 종료시 발생하는 버그를 잡아줌
-    ports:
-      - "5173:5173"
 
   # proxy nginx
   nginx:
@@ -19,12 +17,12 @@ services:
       context: ./nginx
       dockerfile: Dockerfile
     ports:
-      - "8080:80"
+      - "3000:80"
 
   backend:
     build:
       context: ./backend
-      dockerfile: Dockerfile.dev
+      dockerfile: Dockerfile
     container_name: app_backend
     volumes:
       - /app/node_modules #개발환경에서 코드 수정시 node_modules은 호스트의 node_modules를 참조하지 않음.
