--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -29,6 +29,12 @@ services:
     volumes:
       - /app/node_modules #개발환경에서 코드 수정시 node_modules은 호스트의 node_modules를 참조하지 않음.
       - ./backend:/app
+    environment:
+      MYSQL_HOST: mysql
+      MYSQL_USER: root
+      MYSQL_ROOT_PASSWORD: my password
+      MYSQL_DATABASE: myapp
+      MYSQL_PORT: 3306
     depends_on:
       - mysql
 
