--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -12,16 +12,15 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
-      - run: echo Docker Login
+
+      - name: Build Docker Image for Tests
+        run: docker build -f frontend/Dockerfile.dev -t 86tkstar/react-test-app
+
+      - name: Run Tests
+        run: docker run 86tkstar/react-test-app npm run test
+
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
-
-
-      - name: Docker Build for Test
-        run: docker build -t 86tkstar/react-test-app -f ./frontend/Dockerfile.dev
-
-      - name: Run Test
-        run: docker run -e CI=true 86tkstar/react-test-app npm run test
