--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Build Docker Image for Tests
-        run: docker build -f frontend/Dockerfile.dev -t 86tkstar/react-test-app
+        run: docker build -f ./frontend/Dockerfile.dev -t 86tkstar/react-test-app
 
       - name: Run Tests
         run: docker run 86tkstar/react-test-app npm run test
