--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -14,10 +14,10 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Build Docker Image for Tests
-        run: docker build -f ./frontend/Dockerfile.dev -t 86tkstar/react-test-app
+        run: docker build -t 86tkstar/react-test-app -f ./frontend/Dockerfile.dev .
 
       - name: Run Tests
-        run: docker run 86tkstar/react-test-app npm run test
+        run: docker run 86tkstar/react-test-app npm test
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
