--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,8 +28,8 @@ services:
       - /app/node_modules #개발환경에서 코드 수정시 node_modules은 호스트의 node_modules를 참조하지 않음.
       - ./backend:/app
     environment:
-      MYSQL_HOST: app_mysql
-      MYSQL_USER: root
-      MYSQL_ROOT_PASSWORD: xorudA0805!
-      MYSQL_DATABASE: myapp
-      MYSQL_PORT: 3306
+      MYSQL_HOST: $MYSQL_HOST
+      MYSQL_USER: $MYSQL_USER
+      MYSQL_ROOT_PASSWORD: $MYSQL_ROOT_PASSWORD
+      MYSQL_DATABASE: $MYSQL_DATABASE
+      MYSQL_PORT: $MYSQL_PORT
