--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,7 @@ services:
     volumes:
       - /app/node_modules #개발환경에서 코드 수정시 node_modules은 호스트의 node_modules를 참조하지 않음.
       - ./backend:/app
+    mem_limit: 128m
     environment:
       MYSQL_HOST: $MYSQL_HOST
       MYSQL_USER: $MYSQL_USER
