--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,7 @@
 version: "3.8"
 services:
   frontend:
-    build:
-      context: ./frontend
-      dockerfile: Dockerfile
-    container_name: app_frontend
+    image: 86tkstar/docker-fullstack-app:frontend-latest
     volumes:
       - /app/node_modules #개발환경에서 코드 수정시 node_modules은 호스트의 node_modules를 참조하지 않음.
       - ./frontend:/app
@@ -13,21 +10,16 @@ services:
   # proxy nginx
   nginx:
     restart: always #재시작 정책
-    build:
-      context: ./nginx
-      dockerfile: Dockerfile
+    image: 86tkstar/docker-fullstack-app:nginx-latest
     ports:
-      - "3000:80"
+      - "80:80"
 
   backend:
-    build:
-      context: ./backend
-      dockerfile: Dockerfile
+    image: 86tkstar/docker-fullstack-app:backend-latest
     container_name: app_backend
     volumes:
       - /app/node_modules #개발환경에서 코드 수정시 node_modules은 호스트의 node_modules를 참조하지 않음.
       - ./backend:/app
-    mem_limit: 128m
     environment:
       MYSQL_HOST: $MYSQL_HOST
       MYSQL_USER: $MYSQL_USER
