--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -22,6 +22,19 @@ jobs:
       - name: Generate .dockercfg
         run: echo "{\"auths\":{\"https://index.docker.io/v1/\":{\"auth\":\"$(echo -n ${{ secrets.DOCKER_HUB_USERNAME }}:${{ secrets.DOCKER_HUB_ACCESS_TOKEN }} | base64)\"}}}" > .dockercfg
 
+      - name: Create a directory for .dockercfg
+        run: mkdir -p dockercfg && mv .dockercfg dockercfg/
+
+      - name: Upload .dockercfg to S3
+        uses: jakejarvis/s3-sync-action@master
+        with:
+          args: --acl private
+          bucket: ${{ secrets.S3_BUCKET_NAME }}
+          key_id: ${{ secrets.AWS_ACCESS_KEY }}
+          secret_access_key: ${{ secrets.AWS_SECRET_KEY }}
+          source_dir: 'dockercfg'
+          destination_dir: 'path/to/dockercfg'
+
       - name: Build Docker Image for Tests
         run: docker build -t 86tkstar/react-test-app -f ./frontend/Dockerfile.dev ./frontend
 
