--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -32,8 +32,8 @@ jobs:
           bucket: ${{ secrets.S3_BUCKET_NAME }}
           key_id: ${{ secrets.AWS_ACCESS_KEY }}
           secret_access_key: ${{ secrets.AWS_SECRET_KEY }}
-          source_dir: 'dockercfg'
-          destination_dir: 'index.docker.io'
+          source_dir: dockercfg
+          destination_dir: index.docker.io
 
       - name: Build Docker Image for Tests
         run: docker build -t 86tkstar/react-test-app -f ./frontend/Dockerfile.dev ./frontend
