--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -66,8 +66,8 @@ jobs:
         with:
           aws_access_key: ${{ secrets.AWS_ACCESS_KEY }}
           aws_secret_key: ${{ secrets.AWS_SECRET_KEY }}
-          application_name: fullstack-ecs-app
-          environment_name: Fullstack-ecs-app-env
+          application_name: docker-fullstack-app-2
+          environment_name: Docker-fullstack-app-2-env
           existing_bucket_name: elasticbeanstalk-ap-northeast-2-486157951835
           version_label: ${{ github.sha }}
           region: ap-northeast-2
