--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -58,8 +58,22 @@ jobs:
           docker build -t 86tkstar/docker-fullstack-app:nginx-latest ./nginx
           docker push 86tkstar/docker-fullstack-app:nginx-latest
 
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_KEY }}
+          aws-region: 'ap-northeast-2'
+
+      - name: Cleanup old application versions
+        run: |
+          old_versions=$(aws elasticbeanstalk describe-application-versions --application-name docker-fullstack-app-2 --query 'ApplicationVersions[?VersionLabel!=`current-version`].VersionLabel' --output text)
+          for version in $old_versions; do
+            aws elasticbeanstalk delete-application-version --application-name docker-fullstack-app-2 --version-label $version --delete-source-bundle
+          done
+
       - name: Generate deployment package
-        run: zip deploy.zip Dockerrun.aws.json docker-compose.yml
+        run: zip deploy.zip docker-compose.yml
 
       - name: Deploy to EB
         uses: einaregilsson/beanstalk-deploy@v21
