--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -73,7 +73,7 @@ jobs:
           done
 
       - name: Generate deployment package
-        run: zip deploy.zip docker-compose.yml
+        run: zip deploy.zip Dockerrun.aws.json docker-compose.yml
 
       - name: Deploy to EB
         uses: einaregilsson/beanstalk-deploy@v21
